@@ -26,6 +26,7 @@ body.lumiere_body_lightgrey {color: black;background: lightgrey;}
 /* ---------------------------------------- Divs flex */
 
 .lumiere_container{display:flex;flex-wrap:wrap;}
+.lumiere_flex_auto{flex:auto;}
 .lumiere_container_border{border: 1px black solid;border-radius:10px;padding:5px;margin:5px;background-color:white;}
 .lumiere_container_flex50{flex:50%;}
 
@@ -232,4 +233,5 @@ body#gutenberg_search{margin:20px !important;}
 h1#searchmovie_title {padding:20px;}
 input#moviesearched{ width:60%;background-color:lightyellow;}
 span.label_moviesearched{font-size:larger !important;padding:10px;}
+
 
